example/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-dev
  namespace: website-dev
  labels:
    app: website-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website-dev
  template:
    metadata:
      labels:
        app: website-dev
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: apache
          image: YOUR_DOCKERHUB_USERNAME/YOUR_IMAGE:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
