example/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-dev
  namespace: website-dev
spec:
  selector:
    app: website-dev
  ports:
    - port: 80
      targetPort: 80
